# flowy

./: .gitignore  Cargo.toml  Info.plist  Makefile  Package.swift  README.md  build.rs  tauri.conf.json
.github/workflows/: ci.yml  release.yml
.hallmark/: log.json
Sources/Flowey/: AppDelegate.swift  AppModel.swift  Config.swift  DictionaryRewriter.swift  HotkeyMonitor.swift  OllamaClient.swift  SettingsView.swift  SettingsWindowController.swift  SpeechRecorder.swift  TextOutput.swift  Types.swift  main.swift
Sources/Flowy/: AmendmentRewriter.swift  AppDelegate.swift  AppModel.swift  AudioDeviceManager.swift  AutoUpdater.swift  Config.swift  DictionaryRewriter.swift  FlowyLog.swift  HoldRecordButton.swift  HotkeyMonitor.swift  HotkeyRecorderView.swift  OllamaClient.swift  OllamaManager.swift  OnboardingView.swift  OnboardingWindowController.swift  OverlayWindowController.swift  PunctuationRewriter.swift  SettingsView.swift  SettingsWindowController.swift  SpeechRecorder.swift  StreamingInjector.swift  TextOutput.swift  TonePreset.swift  TranslationBridge.swift  Types.swift  WhisperRecorder.swift  main.swift
Tests/FlowyTests/: FlowyLogicTests.swift
frontend/: index.html  overlay.html  settings.js  style.css
icons/: icon.icns
scripts/: build-macos.sh  dmg-background.swift  doctor-swift.sh  ensure-codesign-identity.sh  generate-appcast.sh  generate-release-notes.sh  generate-social-card.swift  install-sparkle.sh  package-dmg.sh  preview-dmg-layout.sh  rebuild-launch.sh
src/: audio.rs  commands.rs  config.rs  dictionary.rs  hotkey.rs  main.rs  ollama.rs  overlay.rs  resample.rs  speech.m  state.rs  transcribe.rs  tray.rs  typer.rs
website/: index.html  tokens.css
website/releases/: 0.7.5.html  0.7.6.html  0.8.0.html  0.8.1.html  1.0.0.html  1.1.0.html  1.1.1.html  1.1.2.html  1.2.1.html
