[package]
name = "flowey"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
description = "Minimal local speech-to-text desktop app"
license = "MIT"

[dependencies]
# Tauri
tauri              = { version = "2",  features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart        = "2"
tauri-plugin-dialog           = "2"

# Audio capture
cpal               = "0.15"

# Resampling to 16 kHz for Whisper
rubato             = "0.14"

# Local speech-to-text (whisper.cpp bindings)
whisper-rs         = "0.11"

# Text injection into the focused window
enigo              = "0.2"
# Clipboard access for output-mode = Clipboard
arboard            = "3"

# Config persistence
dirs               = "5"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"

# Utilities
anyhow             = "1"
log                = "0.4"
env_logger         = "0.11"
parking_lot        = "0.12"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level    = 3
lto          = "thin"
codegen-units = 1
strip        = true
