[package]
name = "flowey"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
description = "Minimal local speech-to-text desktop app"
license = "MIT"

[dependencies]
# Tauri
tauri              = { version = "2",  features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart        = "2"
tauri-plugin-dialog           = "2"

# Audio capture (uses CoreAudio on macOS — no ALSA/Win32 deps)
cpal               = "0.15"

# WAV file writer (feeds audio into SFSpeechRecognizer via a temp file)
hound              = "3"

# Synchronous HTTP client for the Ollama post-processor
ureq               = { version = "2", features = ["json"] }

# Config persistence & serialisation
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"

# Utilities
anyhow             = "1"
log                = "0.4"
env_logger         = "0.11"
parking_lot        = "0.12"

# ── macOS-only native bindings ────────────────────────────────
# Keystroke injection via CoreGraphics (no X11 / Win32 code path)
[target.'cfg(target_os = "macos")'.dependencies]
enigo              = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc          = "1"

[profile.release]
opt-level    = 3
lto          = "thin"
codegen-units = 1
strip        = true
